Use SerializedLambda and javassist instead of JVMCI